Wed Aug  6 20:24:31 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in, configure: ensure $host is known by envoking
	AC_CANONICAL_HOST.
	(reported by Mike Petch)

Tue Aug  5 21:41:57 GMT 2003  Holger Bochnig <hbgg@gmx.net>

	* gtktheory.c (GTKShowTheory): rearrange theory window so it fits
	  on 800x600

Tue Aug  5 22:59:25 2003  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: changes needed for win32 cross
	compilation.
	(contributed by Mike Petch)

Tue Aug  5 14:46:18 GMT 2003 Jim Segrave    <jes@jes-2.demon.nl>

	* gnubg.c - fix for lost aarOuput in Hint window, fixes for
	  terminal character set names
	
Mon Aug  4 23:47:19 2003  Oystein Johansen  <oystein@gnubg.org>

        * simplelibgen.c (dirname): Check for USE_GTK, so gutils can be used.

Mon Aug  4 21:20:15 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: some color changes in the html export.

Mon Aug  4 21:04:39 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLCubeAnalysisTable): add class for cubeless equity.

Mon Aug  4 09:18:36 2003 Jim Segrave <jes@jes-2.demon.nl>

	* sgf.c, backgammon.h, play.c, import.c:
	  count number of successive doubles in move record, clean up
	  linking of initial double and following cube actions
	
Sun Aug  3 19:16:13 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (ReturnHits): enlarge buffer.

Sun Aug  3 18:51:30 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): add style to equity column.
	(reported by Albert Silver)

Fri Aug  1 09:01:20 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubgmodule.c: code cleanups. Return 'None' where
	appropriate. Use C loops. Use sequences access instead of
	lists. Return board and others as tuples.

Fri Aug  1 19:49:01 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.am - allow environment variable for thread libs
	* acinclude.m4 - mispled synopsis
	* configure.in - allow environment variable for thread libs
	  export THREAD_LIBS="-lc_r" or similar